// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TileCatalog async loaded wait one second 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TileCatalog__StyledContainerDiv-sc-1rp8b9f-0 gnhFOD"
    >
      <div
        className="TileCatalog__StyledCatalogHeader-sc-1rp8b9f-1 fcqrLo"
      />
      <div
        className="TileGroup__StyledTiles-eak4ed-0 bztVSF"
      >
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileGroup__StyledGreedyTile-eak4ed-1 eTCDyV"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TileCatalog default 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TileCatalog__StyledContainerDiv-sc-1rp8b9f-0 gnhFOD"
    >
      <div
        className="TileCatalog__StyledCatalogHeader-sc-1rp8b9f-1 fcqrLo"
      />
      <div
        className="TileGroup__StyledTiles-eak4ed-0 bztVSF"
      >
        <input
          checked={true}
          className="bx--tile-input"
          id="test1"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test1"
        />
        <label
          className="bx--tile bx--tile--selectable bx--tile--is-selected"
          htmlFor="test1"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile with really long title that should wrap"
                  >
                    Test Tile with really long title that should wrap
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test2"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test2"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test2"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile2"
                  >
                    Test Tile2
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test3"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test3"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test3"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile3"
                  >
                    Test Tile3
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Tile contents
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test4"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test4"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test4"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile4"
                  >
                    Test Tile4
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test5"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test5"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test5"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile5"
                  >
                    Test Tile5
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test6"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test6"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test6"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile6"
                  >
                    Test Tile6
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test7"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test7"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test7"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile7"
                  >
                    Test Tile7
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <div
          className="bx--tile TileGroup__StyledGreedyTile-eak4ed-1 eTCDyV"
        />
      </div>
      <div
        className="SimplePagination__StyledContainer-l7ezj3-0 bzKmAQ"
      >
        <span
          className="SimplePagination__StyledPageLabel-l7ezj3-1 hybMqK"
        >
          Page 1 of 1
        </span>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TileCatalog error 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="TileCatalog__StyledContainerDiv-sc-1rp8b9f-0 gnhFOD"
      >
        <div
          className="TileCatalog__StyledCatalogHeader-sc-1rp8b9f-1 fcqrLo"
        />
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          In error state
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TileCatalog loading 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TileCatalog__StyledContainerDiv-sc-1rp8b9f-0 gnhFOD"
    >
      <div
        className="TileCatalog__StyledCatalogHeader-sc-1rp8b9f-1 fcqrLo"
      />
      <div
        className="TileGroup__StyledTiles-eak4ed-0 bztVSF"
      >
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileCatalog__StyledEmptyTile-sc-1rp8b9f-2 bhInDp"
        >
          <p
            className="bx--skeleton__text"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="bx--tile TileGroup__StyledGreedyTile-eak4ed-1 eTCDyV"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TileCatalog with pages 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TileCatalog__StyledContainerDiv-sc-1rp8b9f-0 gnhFOD"
    >
      <div
        className="TileCatalog__StyledCatalogHeader-sc-1rp8b9f-1 fcqrLo"
      />
      <div
        className="TileGroup__StyledTiles-eak4ed-0 bztVSF"
      >
        <input
          checked={true}
          className="bx--tile-input"
          id="test1"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test1"
        />
        <label
          className="bx--tile bx--tile--selectable bx--tile--is-selected"
          htmlFor="test1"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile with really long title that should wrap"
                  >
                    Test Tile with really long title that should wrap
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test2"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test2"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test2"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile2"
                  >
                    Test Tile2
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test3"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test3"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test3"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile3"
                  >
                    Test Tile3
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Tile contents
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test4"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test4"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test4"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile4"
                  >
                    Test Tile4
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test5"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test5"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test5"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile5"
                  >
                    Test Tile5
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test6"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test6"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test6"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile6"
                  >
                    Test Tile6
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <div
          className="bx--tile TileGroup__StyledGreedyTile-eak4ed-1 eTCDyV"
        />
      </div>
      <div
        className="SimplePagination__StyledContainer-l7ezj3-0 bzKmAQ"
      >
        <span
          className="SimplePagination__StyledPageLabel-l7ezj3-1 hybMqK"
        >
          Page 1 of 2
        </span>
        <div
          className="bx--pagination__button bx--pagination__button--backward SimplePagination__StyledButton-l7ezj3-2 bxiYjR"
          role="button"
          tabIndex={-1}
        >
          <svg
            aria-hidden={true}
            description="Prev page"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 23l-8-7 8-7v14z"
            />
          </svg>
        </div>
        <div
          className="bx--pagination__button bx--pagination__button--forward SimplePagination__StyledButton-l7ezj3-2 gxHBrs"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            description="Next page"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 9l8 7-8 7V9z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TileCatalog with search 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TileCatalog__StyledContainerDiv-sc-1rp8b9f-0 gnhFOD"
    >
      <div
        className="TileCatalog__StyledCatalogHeader-sc-1rp8b9f-1 fcqrLo"
      >
        <div
          className="bx--toolbar-action bx--toolbar-search-container-expandable"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          role="searchbox"
          tabIndex="0"
        >
          <div
            className="bx--search bx--search--sm"
          >
            <svg
              aria-hidden={true}
              className="bx--search-magnifier"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 14.3L10.7 10c1.9-2.3 1.6-5.8-.7-7.7S4.2.7 2.3 3 .7 8.8 3 10.7c2 1.7 5 1.7 7 0l4.3 4.3.7-.7zM2 6.5C2 4 4 2 6.5 2S11 4 11 6.5 9 11 6.5 11 2 9 2 6.5z"
              />
            </svg>
            <label
              className="bx--label"
              htmlFor="entityType-searchbox"
            >
              Search catalog
            </label>
            <input
              aria-hidden={true}
              className="bx--search-input"
              id="entityType-searchbox"
              onChange={[Function]}
              placeholder="Search catalog"
              type="text"
              value=""
            />
            <button
              aria-label="Clear search input"
              className="bx--search-close bx--search-close--hidden"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 4.7l-.7-.7L8 7.3 4.7 4l-.7.7L7.3 8 4 11.3l.7.7L8 8.7l3.3 3.3.7-.7L8.7 8z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="TileGroup__StyledTiles-eak4ed-0 bztVSF"
      >
        <input
          checked={true}
          className="bx--tile-input"
          id="test1"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test1"
        />
        <label
          className="bx--tile bx--tile--selectable bx--tile--is-selected"
          htmlFor="test1"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile with really long title that should wrap"
                  >
                    Test Tile with really long title that should wrap
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test2"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test2"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test2"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile2"
                  >
                    Test Tile2
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test3"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test3"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test3"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile3"
                  >
                    Test Tile3
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Tile contents
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test4"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test4"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test4"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile4"
                  >
                    Test Tile4
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test5"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test5"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test5"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile5"
                  >
                    Test Tile5
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <input
          checked={false}
          className="bx--tile-input"
          id="test6"
          name="entityType"
          onChange={[Function]}
          tabIndex={0}
          type="radio"
          value="test6"
        />
        <label
          className="bx--tile bx--tile--selectable"
          htmlFor="test6"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--tile__checkmark"
          >
            <svg
              aria-label="Tile checkmark"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zM7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
              />
              <path
                d="M7 11L4.3 8.3l.9-.8L7 9.3l4-3.9.9.8L7 11z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                Tile checkmark
              </title>
            </svg>
          </div>
          <div
            className="bx--tile-content"
          >
            <div
              className="CatalogContent__SampleTile-ewhoqc-0 fGbFFm"
            >
              <div
                className="CatalogContent__SampleTileIcon-ewhoqc-1 bUtNbv"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={32}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"
                  />
                </svg>
              </div>
              <div
                className="CatalogContent__SampleTileContents-ewhoqc-3 jiLgiJ"
              >
                <div
                  className="CatalogContent__SampleTileTitle-ewhoqc-2 hHDEru"
                >
                  <span
                    title="Test Tile6"
                  >
                    Test Tile6
                  </span>
                </div>
                <div
                  className="CatalogContent__SampleTileDescription-ewhoqc-4 kFPOSR"
                >
                  Really long string with lots of lots of text too much to show on one line and when it wraps it might cause some interesting issues especially if it starts vertically wrapping outside of tile bounds at the bottom of the tile
                </div>
              </div>
            </div>
          </div>
        </label>
        <div
          className="bx--tile TileGroup__StyledGreedyTile-eak4ed-1 eTCDyV"
        />
      </div>
      <div
        className="SimplePagination__StyledContainer-l7ezj3-0 bzKmAQ"
      >
        <span
          className="SimplePagination__StyledPageLabel-l7ezj3-1 hybMqK"
        >
          Page 1 of 2
        </span>
        <div
          className="bx--pagination__button bx--pagination__button--backward SimplePagination__StyledButton-l7ezj3-2 bxiYjR"
          role="button"
          tabIndex={-1}
        >
          <svg
            aria-hidden={true}
            description="Prev page"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 23l-8-7 8-7v14z"
            />
          </svg>
        </div>
        <div
          className="bx--pagination__button bx--pagination__button--forward SimplePagination__StyledButton-l7ezj3-2 gxHBrs"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            description="Next page"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 9l8 7-8 7V9z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
